--- a/processors/auth/package.json
+++ b/processors/auth/package.json
@@ -2,7 +2,7 @@
   "name": "dc_auth",
   "subdomain": "dcauth",
   "scripts": {
-    "start": "server.js"
+    "start": "auth_server.js"
   },
   "dependencies": {
     "request": ">= 2.0.3",
