--- a/processors/reverse_proxy/package.json
+++ b/processors/reverse_proxy/package.json
@@ -5,7 +5,8 @@
     "start": "server.js"
   },
   "dependencies": {
-    "http-proxy": "0.7.3"
+    "http-proxy": "0.7.3",
+    "pkginfo": "0.2.2"
   },
   "version": "0.0.1"
 }
