--- a/processors/sharejs/package.json
+++ b/processors/sharejs/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "share": "0.4.1",
-    "pkginfo": "0.2.2"
+    "request": ">= 2.0.3",
+    "underscore": ">= 1.1.7"
   },
   "version": "0.0.1"
 }
