rewrite stats calculation for doc count

--- a/processors/reverse_proxy/package.json
+++ b/processors/reverse_proxy/package.json
@@ -2,7 +2,7 @@
   "name": "dc_reverseproxy",
   "subdomain": "dcreverseproxy",
   "scripts": {
-    "start": "server.js"
+    "start": "proxy_server.js"
   },
   "dependencies": {
     "http-proxy": "0.7.3",
