--- a/processors/sharejs/package.json
+++ b/processors/sharejs/package.json
@@ -5,9 +5,10 @@
     "start": "sharejs_server.js"
   },
   "dependencies": {
-    "share": "0.4.1",
+    "share": "0.5.0-pre",
     "request": ">= 2.0.3",
-    "underscore": ">= 1.1.7"
+    "underscore": ">= 1.1.7",
+    "connect": "1.7.0"
   },
-  "version": "0.0.1"
+  "version": "0.0.1-5"
 }
