--- a/processors/uploader/package.json
+++ b/processors/uploader/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "request": "2.1.1",
-    "csv": "0.0.10"
+    "csv": "0.0.10",
+    "underscore": "1.1.7"
   },
-  "version": "0.0.1"
+  "version": "0.0.1-2"
 }
