convert csv upload to tako middleware

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "couchapp": "0.8.1",
     "rewriter": "0.0.1",
-    "txn": "0.2.6"
+    "txn": "0.2.6",
+    "csv": "0.0.10"
   },
   "version": "0.0.1"
 }
