--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "datacouch",
   "subdomain": "data",
   "domains": [
+    "datacouch.com",
     "burritomap.com"
   ],
   "bundleDependencies": [
@@ -31,7 +32,7 @@
   "engine": {
     "node": "0.6.x"
   },
-  "version": "0.0.1-34",
+  "version": "0.0.1-47",
   "scripts": {
     "start": "run.js"
   },
